Took away text alignment and fixed home links

--- a/app/assets/stylesheets/cover.scss
+++ b/app/assets/stylesheets/cover.scss
@@ -5,10 +5,15 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
+  
   background: url(https://source.unsplash.com/K3op9qgNjLg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
+.title
+  {
+    padding-bottom:  3px;
+  }
